src/test/resources/acceptance/reject/compoundAssignmentNoSemicolon.ul
int id1 ()
{
    id1 [ 0 ] = 0
}
